Finito di documentare lo swagger
Sarebbe carino documentare i vari codici di errore delle route
